Changelog for Articles.

Articles 1.6.2
===============================
- Fix RSS item URLs for sites with non-root site URLs
- Fix issues with package management for subpackages when zips are not found
- Update German/Dutch translations
- Update getResources to 1.5.0-pl
- Future-proofing for MODX 2.3

Articles 1.6.1
===============================
- Update Quip to 2.3.1-pl
- Update Archivist to 1.2.3-pl

Articles 1.6.0
===============================
- [#6373] Add ability to control the structure of the URLs generated for articles
- [#7560] Fix issue with Quip during installs
- [#7544] Fix issues with friendly_urls setting

Articles 1.5.1
===============================
- Update Quip to 2.3.0-pl
- Update tagLister to 1.1.7-pl
- [#7559] Display ID of Article in articles grid
- [#7550] Fix JS issue with Create New Article button

Articles 1.5.0
===============================
- [#7313] Ensure that the archive URI is always set prior to notifications during a publishing event
- [#7419] Add ability to duplicate single Articles
- [#7517] Add ability to duplicate Articles Container
- Deprecate custom DB fields to use new properties field on modResource

Articles 1.4.7
===============================
- [#7069] Add articles.article_show_longtitle setting for toggling on/off the longtitle field when editing Articles
- [#7057] Fix issue with RTEs and updating an Article

Articles 1.4.6
===============================
- Fix issue with Articles snippet and $this reference

Articles 1.4.5
===============================
- [#6832],[#6697],[#6596] Remove 255 char limit from Article summary field, remove 100 char tags field limit

Articles 1.4.4
===============================
- [#6641] Add option to turn off richtext editing for Articles in a Container
- [#6897] Add offset as option to latest posts display
- [#6639] Add option to change default sorting for Articles in mgr container grid
- [#7001] Fix issue where disabling comments prevented other placeholders from displaying