@@ -4,6 +4,7 @@ Articles 1.6.2
 ===============================
 - Fix RSS item URLs for sites with non-root site URLs
 - Fix issues with package management for subpackages when zips are not found
+- [#8194] Add ability to change createdby for Articles for users with publish ability
 - Update German/Dutch translations
 - Update getResources to 1.5.0-pl
 - Future-proofing for MODX 2.3
